[gd_scene load_steps=14 format=3 uid="uid://cku7rhe8jn3tx"]

[ext_resource type="PackedScene" uid="uid://dpt3c8srdp3wx" path="res://Combat/party.tscn" id="1_g80uy"]
[ext_resource type="Script" path="res://Combat/combat.gd" id="1_y8ty4"]
[ext_resource type="Texture2D" uid="uid://c5k2kc0xwrqao" path="res://Arts/Combat effects/blue circle .png" id="3_58fml"]
[ext_resource type="Script" path="res://Combat/CombatLogic.gd" id="4_qfjqk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cqvtd"]
atlas = ExtResource("3_58fml")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rblld"]
atlas = ExtResource("3_58fml")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy2dn"]
atlas = ExtResource("3_58fml")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2aap"]
atlas = ExtResource("3_58fml")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5c4k"]
atlas = ExtResource("3_58fml")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3r7s"]
atlas = ExtResource("3_58fml")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt8g0"]
atlas = ExtResource("3_58fml")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tenx"]
atlas = ExtResource("3_58fml")
region = Rect2(0, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kai36"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqvtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rblld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy2dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2aap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5c4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3r7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt8g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tenx")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="Combat" type="Node2D"]
script = ExtResource("1_y8ty4")

[node name="LeftParty" parent="." instance=ExtResource("1_g80uy")]
position = Vector2(150, 0)
scale = Vector2(3.5, 3.5)

[node name="RightParty" parent="." instance=ExtResource("1_g80uy")]
position = Vector2(1200, 0)
scale = Vector2(-3.5, 3.5)

[node name="ActiveUnitMarker" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_kai36")
autoplay = "default"

[node name="CombatLogic" type="Node" parent="."]
script = ExtResource("4_qfjqk")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
